fix: contrast fixes for icons and elements

--- a/digitransit-component/packages/digitransit-component-autosuggest/src/helpers/styles.scss
+++ b/digitransit-component/packages/digitransit-component-autosuggest/src/helpers/styles.scss
@@ -4,7 +4,7 @@
 @import '~@hsl-fi/sass/mixins/text';
 
 $primary-color: #007ac9;
-$from-color: #64be14;
+$from-color: #4ea700;
 $to-color: #ec5188;
 $search-result-text-highlight-background-color: #F4F4F5;
 $zindex: base, map-container, footer, map-gradient, map-fullscreen-toggle,
